Add project logo

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"Programming Languages",
 		"Snippets"
 	],
+	"icon": "images/octave-hacking-logo.png",
 	"activationEvents": [
 		"onLanguage:octave"
 	],
