code: .gitignore: Add stuff from MS's examples
Add .gitignore items from Microsoft's vscode-extension-samples repo. Reformat the file to distinguish between standard VS Code extension ignores and Octave-Hacking-specific stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-node_modules
-out
-dist
+# .gitignore for a Octave Hacking VS Code extension
+#
+# Based on https://github.com/microsoft/vscode-extension-samples/blob/main/.gitignore
+
+# Regular VS Code extension ignores
+
+npm-debug.log
+node_modules/
+out/
+.vs/
+tsconfig.lsif.json
+*.lsif
+*.db
+
 *.vsix
+
+.DS_Store
+Thumbs.db
+
+# Octave Hacking specific ignores
+
+dist/
