--- a/package.json
+++ b/package.json
@@ -71,9 +71,29 @@
 		"@types/node": "^12.11.7",
 		"@types/vscode": "^1.41.0",
 		"glob": "^7.1.5",
+		"log-symbols": "^5.1.0",
+		"mkdirp": "^1.0.4",
 		"mocha": "^6.2.3",
-		"typescript": "^3.6.4",
-		"tslint": "^5.20.0",
+		"object-inspect": "^1.12.2",
+		"path-parse": "^1.0.7",
+		"side-channel": "^1.0.4",
+		"sprintf-js": "^1.1.2",
+		"tslint": "^5.20.1",
+		"typescript": "^3.9.10",
 		"vscode-test": "^1.2.2"
+	},
+	"dependencies": {
+		"ansi-colors": "^4.1.3",
+		"camelcase": "^7.0.0",
+		"diff": "^5.1.0",
+		"es-abstract": "^1.20.2",
+		"es-to-primitive": "^1.2.1",
+		"growl": "^1.10.5",
+		"http-proxy-agent": "^5.0.0",
+		"https-proxy-agent": "^5.0.1",
+		"once": "^1.4.0",
+		"rimraf": "^3.0.2",
+		"semver": "^7.3.7",
+		"set-blocking": "^2.0.0"
 	}
 }
