Additions to .vscodeignore for efficiency

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,16 @@
-.vscode/**
-.vscode-test/**
-out/test/**
-src/**
-.gitignore
-vsc-extension-quickstart.md
+src/
+**/*.ts
+.vscode/
+.vscode-test/
+out/test/
 **/tsconfig.json
 **/tslint.json
+.prettierrc.json
 **/*.map
-**/*.ts
-site-assets
+.gitignore
+.github/
+site-assets/
+doc-project/
+Makefile
+.DS_Store
+.editorconfig
