--- a/package.json
+++ b/package.json
@@ -59,27 +59,37 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "build": "npm run esbuild-base -- --sourcemap",
+    "build-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "fmt": "prettier --write \"src/**/*.ts\"&& npm run test -- --fix",
+    "test": "eslint src --ext ts && tsc --noEmit",
 		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
+    "test-compile": "tsc -p ./",
 		"pretest": "npm run compile",
-		"test": "node ./out/test/runTest.js"
+		"test-old": "node ./out/test/runTest.js",
+		"watch": "tsc -watch -p ./"
 	},
 	"devDependencies": {
 		"@types/glob": "^8.0.0",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^16.11.58",
 		"@types/vscode": "^1.71.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
 		"@vscode/test-electron": "^2.1.5",
+		"esbuild": "^0.15.7",
+		"eslint": "^8.23.1",
 		"glob": "^8.0.3",
 		"log-symbols": "^5.1.0",
 		"mkdirp": "^1.0.4",
 		"mocha": "^9.2.2",
 		"object-inspect": "^1.12.2",
 		"path-parse": "^1.0.7",
+		"prettier": "^2.7.1",
 		"side-channel": "^1.0.4",
 		"sprintf-js": "^1.1.2",
-		"tslint": "^6.1.3",
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
