--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"name": "Andrew Janke",
 		"email": "floss@apjanke.net"
 	},
-	"version": "0.2.13-SNAPSHOT",
+	"version": "0.2.13",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/apjanke/vscode-octave-hacking"
