--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"activationEvents": [
 		"onLanguage:octave"
 	],
-	"main": "./out/extension.js",
+	"main": "./out/main.js",
 	"contributes": {
 		"languages": [
 			{
@@ -59,8 +59,8 @@
 		]
 	},
 	"scripts": {
-    "vscode:prepublish": "npm run esbuild-base -- --minify",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
     "build": "npm run esbuild-base -- --sourcemap",
     "build-watch": "npm run esbuild-base -- --sourcemap --watch",
     "fmt": "prettier --write \"src/**/*.ts\"&& npm run test -- --fix",
