Make "switch" a bracketing symbol in language-configuration

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -13,6 +13,7 @@
         ["if", "endif"],
         ["for", "endfor"],
         ["while", "endwhile"],
+        ["switch", "endswitch"],
         ["try", "end_try_catch"],
         ["unwind_protect", "end_unwind_protect"]
     ],
