--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"name": "Andrew Janke",
 		"email": "floss@apjanke.net"
 	},
-	"version": "0.2.15-SNAPSHOT",
+	"version": "0.2.15",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/apjanke/vscode-octave-hacking"
@@ -25,7 +25,8 @@
 	],
 	"icon": "images/octave-hacking-logo.png",
 	"activationEvents": [
-		"onLanguage:octave"
+		"onLanguage:octave",
+		"onCommand:octave.run"
 	],
 	"main": "./out/main.js",
 	"contributes": {
@@ -42,7 +43,11 @@
 					"PKG_ADD",
 					"PKG_DEL"
 				],
-				"configuration": "./language-configuration.json"
+				"configuration": "./language-configuration.json",
+				"icon": {
+					"light": "./images/octave-logo.light.svg",
+					"dark": "./images/octave-logo.dark.svg"
+				}
 			}
 		],
 		"grammars": [
@@ -57,7 +62,54 @@
 				"language": "octave",
 				"path": "./snippets.json"
 			}
-		]
+		],
+		"commands": [
+			{
+				"command": "octave.run",
+				"title": "Run with Octave",
+				"category": "Octave",
+				"icon": {
+					"light": "./images/octave-run.light.svg",
+					"dark": "./images/octave-run.dark.svg"
+				}
+			}
+		],
+		"keybindings": [
+			{
+				"command": "octave.run",
+				"key": "ctrl+f5",
+				"when": "resourceLangId == octave"
+			}
+		],
+		"menus": {
+			"editor/title": [
+				{
+					"command": "octave.run",
+					"when": "editorLangId == octave",
+					"group": "navigation@1"
+				}
+			],
+			"editor/title/context": [
+				{
+					"command": "octave.run",
+					"when": "resourceLangId == octave",
+					"group": "3_preview"
+				}
+			],
+			"explorer/context": [
+				{
+					"command": "octave.run",
+					"when": "resourceLangId == octave",
+					"group": "0_octave"
+				}
+			],
+			"commandPalette": [
+				{
+					"command": "octave.run",
+					"when": "editorLangId == octave || resourceLangId == octave"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
